2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	Preparation for merge keypress_listeners & key listeners(from "as_key")
	* gameswf/gameswf_classes/as_key(cpp,h): added
	virtual	bool as_key::on_event(const event_id& id)
	* gameswf/gameswf_root.(cpp,h): replaced
	character* listener ==>	as_object_interface* listener
	* gameswf/gameswf.h: added
	virtual	bool as_key::on_event(const event_id& id) to as_object_interface
	* gameswf/gameswf_movie.h: removed
	virtual	bool as_key::on_event(const event_id& id) to as_object_interface
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_button.cpp,
	* gameswf/gameswf_impl.cpp: updated on_event() declaration

2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	struct movie_root is moved
	from
	* gameswf/gameswf_impl.(cpp,h)
	to
	* gameswf/gameswf_root.(cpp,h)
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_dlist.cpp: added #include gameswf_root.h
	* gameswf/win32/VC8/gameswf.vcproj: added gameswf_root.(cpp,h)
	
2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_movie.h: added,
	contains struct movie
	* gameswf/gameswf_impl.h: added #include gameswf_movie.h
	* gameswf/win32/VC8/gameswf.vcproj: added gameswf_movie.h
	
2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_morph(cpp,h): removed since they
	have become outdated many years ago
	
2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: movie.h => gameswf_classes/as_MovieClipLoader.h
	* gameswf/gameswf_movie(cpp, h): moved to
	gameswf_classes/as_MovieClipLoader(cpp,h)
	* gameswf/win32/VC8/gameswf.vcproj:
	removed gameswf_movie9cpp,h)
	added gameswf_classes/as_MovieClipLoader(cpp,h)
	
2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/win32/VC8/gameswf.vcproj,
	* gameswf/gameswf_classes/as_key(cpp,h): 
	forgot to commit

2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: fixed ~edit_text_character()
	on_event(event_id::KILLFOCUS) bug
	* gameswf/gameswf_button.cpp: a bit cleanup
	